[package]
name = "saori-resized-png"
version = "1.0.2"
authors = ["tukinami seika <10forchette@gmail.com>"]
license = "MIT"
readme = "README.md"
edition = "2021"
description = "SAORI to resize image and save as png"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
fast_image_resize = "2.4.0"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3.9", features = ["winbase", "libloaderapi"]}
encoding_rs = "0.8.31"

[dev-dependencies]
tempfile = "3.3.0"

[lib]
name = "resizedpng"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
